cleanup extra spaces, fix padding on models, misc cleanup

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,13 +12,14 @@ body {
     font-size: 20px;    
     font-family: Cedarville Cursive;
     width: 300px;
+    padding-top: px;
     padding-left: 10px;
     line-height: 30px;
+    
  
     input {
         width: 250px;
-        font-size: 18px;
- 
+        font-size: 15px;
         &.changed {
             background: rgb(181, 255, 177);
         }
@@ -26,7 +27,8 @@ body {
 }
 
 .newChoreButton {
-    margin-top: 100px;
+    margin-top: 90px;
+    margin-bottom: 7px;
     margin-left: 135px;
     cursor: pointer;
     text-shadow: 1px 1px 1px black;
@@ -74,7 +76,7 @@ body {
  
 .save-button {
     float: right;
-    margin-top: 0px;
+    margin-top: 2px;
     margin-right: 10px;
     text-shadow: 1px 1px 1px black;
 }
@@ -82,14 +84,14 @@ body {
 .edit-button {
     float: right;
     margin-right: 10px;
-    margin-top: 0px;
+    margin-top: 2px;
     text-shadow: 1px 1px 1px black;
 }
  
 .delete-button {
     float: right;
     margin-right: 10px;
-    margin-top: 0px;
+    margin-top: 2px;
     color: white;
     text-shadow: 1px 1px 1px black;
 }
@@ -105,6 +107,5 @@ body {
     display: inline-block;
     width: 500px;
     margin-left: 128px;
-    margin-top: 7px;
-       
+    margin-top: 7px;  
 }
